# yamd

./: README.md  jobFile.job
milestones/: meson.build
milestones/01/: meson.build
milestones/04/: energy04.txt  main.cpp  meson.build  plot.ipynb
milestones/05/: energy.txt  main.cpp  meson.build  plot.ipynb
milestones/06/: main.cpp  meson.build  plot.ipynb
milestones/07/: Readings.csv  dt_eam.csv  main.cpp  meson.build  plot.ipynb
milestones/09/: main.cpp  meson.build  plot.ipynb  whisker_6590.csv  whisker_large_reading.csv  whisker_small.csv
milestones/mackay/: meson.build
src/: atoms.h  berendsen_thermostat.cpp  berendsen_thermostat.h  domain.cpp  ducastelle.cpp  ducastelle.h  lj.cpp  lj.h  lj_direct_summation.cpp  lj_direct_summation.h  meson.build  mpi_support.h  neighbors.cpp  neighbors.h  types.h  verlet.cpp  verlet.h  xyz.h
subprojects/eigen-3.4.0/: .gitignore  .meson-subproject-wrap-hash.txt
subprojects/googletest-1.14.0/: .meson-subproject-wrap-hash.txt
tests/: meson.build  test_ducastelle.cpp  test_lj_direct_summation.cpp  test_neighbors.cpp  test_thermostat.cpp  test_verlet.cpp
